# Minimalist-Browser

./: LICENSE  README.md  app.py  in.aryank.MinimalistBrowser.json  meson.build  requirements.txt  web_sidebar.ui
data/: in.aryank.MinimalistBrowser.desktop.in  in.aryank.MinimalistBrowser.gschema.xml  in.aryank.MinimalistBrowser.json  in.aryank.MinimalistBrowser.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: history_dialog.ui  history_manager.py  main.py  meson.build  minimalistbrowser.gresource.xml  minimalistbrowser.in  page.py  preferences.py  utils.py  web_sidebar.ui  webview.py
